# git-monitor

./: README.md
.github/workflows/: rust.yml
git-monitor-backend/: .env  .gitignore  Api.yaml  Cargo.toml  rustfmt.toml
git-monitor-backend/prisma/: schema.prisma
git-monitor-backend/prisma-cli/: Cargo.toml
git-monitor-backend/src/: lib.rs  main.rs  prisma.rs
git-monitor-backend/src/responses/: generic.rs  mod.rs  repo.rs
git-monitor-backend/src/services/: mod.rs  repo.rs  user.rs
git-monitor-backend/src/services/config/: mod.rs  util.rs
git-monitor-backend/src/services/repo/: mod.rs
git-monitor-backend/src/services/repos/: get.rs  mod.rs  set.rs  updates.rs  utils.rs
git-monitor-backend/src/services/repos/branches/: errors.rs  local.rs  mod.rs
git-monitor-backend/src/services/repos/index/: file.rs  mod.rs
git-monitor-frontend/: .editorconfig  .eslintrc.js  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  stylelint.config.js  tailwind.config.js  tsconfig.json
git-monitor-frontend/api/: api.ts  repos.ts
git-monitor-frontend/components/: AppAlert.vue  ColorModePicker.vue  Repo.vue  RepoCard.vue
git-monitor-frontend/composables/: api.ts  gitConfig.ts  repos.ts
git-monitor-frontend/layouts/: default.vue
git-monitor-frontend/pages/: about.vue  index.vue  test.vue
git-monitor-frontend/plugins/: vuetify.ts
git-monitor-frontend/src/: App.spec.ts  App.vue  main.ts  style.css
git-monitor-frontend/types/: branch.ts  repo.ts  repoState.ts  repostate.ts  status.ts
git-monitor-frontend/utils/: statusToString.ts
(+2 files in other folders)
