[package]
name = "git-monitor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = { version = "0.17.2" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
users = { version = "0.11.0" }
walkdir = { version = "2" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "sqlite",
] }
futures = "0.3.28"
actix-cors = "0.6.4"

[dev-dependencies]
structopt = "0.3"

[workspace]
members = ["prisma-cli"]
